--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,12 +18,13 @@ en:
 
   time:
     formats:
-      default: "%Y-%m-%d %H:%M"
+      default: "%Y-%m-%d %H:%M:%S"
       long: "%A, %e. %B %Y, %H:%M"
       short: "%d.%m.%y, %H:%M"
       shorts: "%d.%m.%y, %H:%M:%S"
       date: "%Y-%m-%d"
       date_long: "%d. %B %Y"
+      time: "%H:%M:%S"
   date:
     formats:
       default: "%Y-%m-%d"
