--- a/config/locales/admin/billing/prices.en.yml
+++ b/config/locales/admin/billing/prices.en.yml
@@ -15,8 +15,6 @@ en:
 
         edit:
           title: Edit price
-          expire_btn: Expire
-          expire_btn_confirm: Are you sure you want to expire price?
 
         update:
           updated: Price has been updated
@@ -32,3 +30,7 @@ en:
           all: All
           search_btn: Search
           reset_btn: Reset
+
+        expire_btn:
+          label: Expire
+          confirm: Are you sure you want to expire price?
