--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -205,7 +205,6 @@ en:
         alg: 'Algorithm'
         public_key: 'Public key'
       registrar:
-        billing_email: 'Billing e-mail'
         phone: 'Contact phone'
         email: 'Contact e-mail'
         state: 'State / Province'
@@ -835,3 +834,6 @@ en:
         delimiter: " "
         precision: 2
         unit: €
+
+  attributes:
+    vat_no: VAT number
