Remove unused attribute
#509

--- a/config/locales/registrar/invoices.en.yml
+++ b/config/locales/registrar/invoices.en.yml
@@ -9,3 +9,7 @@ en:
         minimum_total: Minimum total
         maximum_total: Maximum total
         reset_btn: Reset
+
+      partials:
+        details:
+          prepayment: Prepayment
