--- a/config/locales/invoices.en.yml
+++ b/config/locales/invoices.en.yml
@@ -2,4 +2,4 @@ en:
   activerecord:
     attributes:
       invoice:
-        vat_amount_with_rate: VAT %{rate}%
+        vat_amount_with_rate: VAT %{rate}
