Add registrar IBAN

--- a/config/locales/registrar/settings/auto_invoice.en.yml
+++ b/config/locales/registrar/settings/auto_invoice.en.yml
@@ -10,6 +10,7 @@ en:
           header: Auto-invoicing
 
         form:
+          iban_hint: Spaces are allowed
           submit_btn: Update
 
         update:
