Add clarifying comment

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -522,7 +522,7 @@ en:
   invoice_no: 'Invoice no. %{no}'
   invoice_number: Invoice no.
   seller: 'Seller'
-  prepayment: 'Prepayment'
+  prepayment: 'Prepayment' # t(invoice_item.description)
   unpaid: 'Unpaid'
   your_current_account_balance_is: 'Your current account balance is %{balance} %{currency}'
   billing: 'Billing'
