--- a/config/locales/registrars.en.yml
+++ b/config/locales/registrars.en.yml
@@ -2,10 +2,10 @@ en:
   activerecord:
     attributes:
       registrar:
-        auto_invoice_activated: Activated
-        auto_invoice_low_balance_threshold: Low balance threshold
-        auto_invoice_top_up_amount: Top-up amount
-        auto_invoice_iban: IBAN
+        auto_account_top_up_activated: Activated
+        auto_account_top_up_low_balance_threshold: Low balance threshold
+        auto_account_top_up_amount: Top-up amount
+        auto_account_top_up_iban: IBAN
     errors:
       models:
         registrar:
